# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\UserController;
+use App\Http\Controllers\CollaboratorController;
 
 /*
 |--------------------------------------------------------------------------
@@ -21,12 +22,20 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
+#### LOGIN
 Route::post('/login', [AuthController::class, 'login']);
-
-Route::get('/test', [AuthController::class, 'test']);
 
 // Rotas protegidas (requerem autenticação JWT)
 Route::middleware('auth:api')->group(function () {
+    
+    #### ROTAS USER
     Route::post('logout', [AuthController::class, 'logout']);
     Route::post('/users', [UserController::class, 'store']);
+    Route::get('/users', [UserController::class, 'index']);
+    
+    ## ROTAS COLABORADORES
+    Route::post('/collaborators', [CollaboratorController::class, 'store']);
+    Route::get('/collaborators', [CollaboratorController::class, 'index']);
+    Route::put('/collaborators/{id}', [CollaboratorController::class, 'update'])->name('collaborators.update');
+    Route::delete('/collaborators/{id}', [CollaboratorController::class, 'destroy'])->name('collaborators.destroy');
 });
